# Library-Notifications-Service

./: .flake8  .isort.cfg  .pre-commit-config.yaml
.github/workflows/: ci.yml  pull-request.yaml  push-main.yaml  push-master.yaml  release.yaml  reusable-workflow.yml  tests.yaml
Library-Notification-Service/: Dockerfile  LICENSE  README.md
Library-Notification-Service/src/: api.py  env.py  utils.py
Library-Notification-Service/src/providers/: library_newsletter.py
annual-reports/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
annual-reports/src/: api.py  cli.py  models.py
annual-reports/tests/: conftest.py  test_api.py
annual-reports/tests/cassettes/: TestAPI.test_categories.yaml  TestAPI.test_journals.yaml  TestAPI.test_publications.yaml  TestAPI.test_subjects.yaml
matomo-api/: Dockerfile  docker-compose-tests.yaml  pyproject.toml
matomo-api/matomo/: models.py
matomo-api/src/: api.py  cli.py
matomo-api/tests/: conftest.py  test_api.py  test_cli.py  utils.py
matomo-api/tests/cassettes/: test_cli.yaml  test_cli_default_arguments.yaml  test_matomo_api_get_unique_visitors.yaml  test_matomo_api_get_visits_per_day.yaml  test_matomo_fetch_inspire_statistics.yaml
src/providers/cambridge/: cambridge_cli.py  get_test_data.py
