[tool.poetry]
name = "Annual Reports"
version = "0.1.0"
description = ""
authors = ["CERN SIS TS"]
packages = [
    { include = "*", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
click = "^8.1.7"
pytest = "^7.4.2"
pytest-vcr = "^1.0.2"
urllib3 = "1.26.7"
freezegun = "^1.2.2"
sqlalchemy = "^2.0.22"
sqlalchemy-utils = "^0.41.1"
structlog = "^23.2.0"
backoff = "^2.2.1"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
